--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chart.js": "^4.4.4",
     "element-plus": "^2.8.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
